# Effect-Renderer

./: .gitignore  CMakeLists.txt  ReadMe.md
PerlinNoise/: perlinnoise.cpp  perlinnoise.h
src/: main.cpp  previewwindow.cpp  previewwindow.h  recorder.cpp  recorder.h  renderer.cpp  renderer.h
